tests/TypingSpec/valid/prog/let-pat-pair-session.algst
recvPair : ∀(a:TU) (b:TU) (s:SL). ?(a, b).s -> ?a.?b.s
recvPair c =
  let (,) c = c in
  c
