tests/TypingSpec/invalid/types/let-pat-no-pat-type.algst
\[s:SL] (c : !P0.s) ->
  let P0 c = c in
  c
